--- a/about.html
+++ b/about.html
@@ -32,7 +32,13 @@
       <div class="navbar">
         <div data-collapse="all" data-animation="default" data-duration="400" class="simple-nav w-nav">
           <div class="menu-container w-container">
-            <nav role="navigation" class="simple-nav-link-holder w-nav-menu"><a href="index.html" class="simple-link w-nav-link">Home</a><a href="about.html" class="simple-link w-nav-link w--current">About</a><a href="consulting-services.html" class="simple-link w-nav-link">Consulting Services</a><a href="blog.html" class="simple-link w-nav-link">Blog</a><a href="contact-us.html" class="simple-link w-nav-link">Contact</a></nav>
+            <nav role="navigation" class="simple-nav-link-holder w-nav-menu">
+              <a href="index.html" class="simple-link w-nav-link">Home</a>
+              <a href="about.html" class="simple-link w-nav-link w--current">About</a>
+              <a href="consulting-services.html" class="simple-link w-nav-link">Services</a>
+              <a href="blog.html" class="simple-link w-nav-link">Blog</a>
+              <a href="contact-us.html" class="simple-link w-nav-link">Contact</a>
+            </nav>
             <div data-ix="shortend" class="simple-menu-button w-nav-button">
               <div class="line-1 simple"></div>
               <div class="line-2 simple"></div>
@@ -47,12 +53,12 @@
 
     <div class="container header-container">
       <div class="col">
-        <h1 class="heading-beta">Hello, we&#x27;re Gresk.</h1>
+        <!-- <h1 class="heading-beta">Hello, we&#x27;re Colibri</h1> -->
       </div>
     </div>
     <div class="container">
       <div class="col lg-12">
-        <div class="ultra-big-fat-paragraph">We&#x27;re a business consulting company in Surabaya Indonesia.<br>Developing excellence into outcomes, quickly and sustainably.</div>
+        <div class="ultra-big-fat-paragraph">We&#x27;re a business consulting company working on<br>Developing excellence into outcomes, quickly and sustainably.</div>
       </div>
     </div>
   </div>
@@ -60,7 +66,7 @@
     <div class="container">
       <div class="col lg-4">
         <div class="pre-title">Who We Are</div>
-        <p class="heading-2">Gresk is one of the world&#x27;s leading management consulting firms</p>
+        <p class="heading-2">Colibri is one of the world&#x27;s leading management consulting firms</p>
       </div>
       <div class="col flow">
         <p class="fat-paragraph margin-top">We advise global leaders on their most critical issues and opportunities: strategy, marketing, organization, operations, information technology, digital transformation and strategy, advanced analytics, transformations, sustainability, corporate finance and mergers and acquisitions, across all industries and geographies. Our unique approach to traditional change management, called Agilitor, helps clients measure and manage risk and overcome the odds to realize results.</p>
@@ -72,7 +78,7 @@
       <div class="container">
         <div class="col lg-4">
           <div data-w-id="78e17f89-5df2-9b90-a77c-7625f9e46a4c" class="fact-numbers">1981</div>
-          <p class="short-description">Gresk was founded in 1981 with a mission to redefine the management consulting industry to focus on delivering client results, not just producing reports.</p>
+          <p class="short-description">Colibri was founded in 1981 with a mission to redefine the management consulting industry to focus on delivering client results, not just producing reports.</p>
         </div>
         <div class="col lg-4">
           <div data-w-id="e4146ecc-4098-86a0-d9c3-afc88fdfda62" class="fact-numbers">3:1</div>
@@ -132,7 +138,7 @@
   <div class="section section-footer">
     <div class="container footer-top">
       <div class="col flow">
-        <div class="heading-beta margin-bottom">Let&#x27;s Talk</div><a href="mailto:hello@gresk.ninja" class="email-address">hello@gresk.ninja</a></div>
+        <div class="heading-beta margin-bottom">Let&#x27;s Talk</div><a href="mailto:hello@gresk.ninja" class="email-address">info@colibri.africa</a></div>
       <div class="col sm-12"><img src="images/logo2.svg" alt=""></div>
     </div>
     <div class="container">
@@ -156,7 +162,7 @@
           <div class="footer-menu-list"><a href="#" class="footer-link-item">Facebook</a></div>
           <div class="footer-menu-list"><a href="#" class="footer-link-item">Twitter</a></div>
           <div class="footer-menu-list"><a href="#" class="footer-link-item">Instagram</a></div>
-          <div class="footer-menu-list"><a href="#" class="footer-link-item">Youtube</a></div>
+          
         </div>
       </div>
     </div>
