--- a/consulting-services.html
+++ b/consulting-services.html
@@ -1,13 +1,11 @@
 
-<!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Jul 11 2019 02:22:28 GMT+0000 (UTC)  -->
 <html data-wf-page="5d1978a7f3be3c3e6c8ee09f" data-wf-site="5d11db7bf9a609f7ab646d8c">
 <head>
   <meta charset="utf-8">
   <title>Consulting Services</title>
   <meta content="Some keywords that best describes your site" name="description">
-  <meta content="Consulting Services" property="og:title">
-  <meta content="Some keywords that best describes your site" property="og:description">
+  <meta content="Virtual Assistance" property="og:title">
+  <meta content="Virtual Assistance, Outsorcing" property="og:description">
   <meta content="summary" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   
