--- a/contact-us.html
+++ b/contact-us.html
@@ -24,11 +24,11 @@
 <body>
   <div class="nav-wrapper">
     <div class="container navigation-bar">
-      <div class="logo"><a href="index.html" class="logo-block w-inline-block"><img src="images/logo2.svg" alt=""></a></div>
+      <div class="logo"><a href="index.html" class="logo-block w-inline-block"><img src="img/colibri-logo.svg" alt=""></a></div>
       <div class="navbar">
         <div data-collapse="all" data-animation="default" data-duration="400" class="simple-nav w-nav">
           <div class="menu-container w-container">
-            <nav role="navigation" class="simple-nav-link-holder w-nav-menu"><a href="index.html" class="simple-link w-nav-link">Home</a><a href="about.html" class="simple-link w-nav-link">About</a><a href="consulting-services.html" class="simple-link w-nav-link">Consulting Services</a><a href="blog.html" class="simple-link w-nav-link">Blog</a><a href="contact-us.html" class="simple-link w-nav-link w--current">Contact</a></nav>
+            <nav role="navigation" class="simple-nav-link-holder w-nav-menu"><a href="index.html" class="simple-link w-nav-link">Home</a><a href="about.html" class="simple-link w-nav-link">About</a><a href="consulting-services.html" class="simple-link w-nav-link">Services</a><a href="blog.html" class="simple-link w-nav-link">Blog</a><a href="contact-us.html" class="simple-link w-nav-link w--current">Contact</a></nav>
             <div data-ix="shortend" class="simple-menu-button w-nav-button">
               <div class="line-1 simple"></div>
               <div class="line-2 simple"></div>
