--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","Gothic A1:regular,700,900"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   
-  <link href="images/Slice-2.png" rel="shortcut icon" type="image/x-icon">
-  <link href="images/Slice-2_1.png" rel="apple-touch-icon">
+  <!-- <link href="images/Slice-2.png" rel="shortcut icon" type="image/x-icon">
+  <link href="images/Slice-2_1.png" rel="apple-touch-icon"> -->
 </head>
 <body class="body">
   <div class="nav-wrapper">
