--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </div>
   <div class="section">
     <div class="container flex-v">
-      <h1 class="hero-title">Outsourcing tasks the right way and <br>warrant tasks</h1>
+      <h1 class="hero-title">Outsourcing tasks the right way  <br>warrant tasks</h1>
     </div>
     <div class="container extended">
       <div class="col lg-12">
@@ -115,7 +115,7 @@
       <div class="col lg-12">
         <div class="w-layout-grid grid gap-120">
           <div class="grid-item flex margin-bottom"><img src="http://via.placeholder.com/32x32" width="32" alt="" class="margin-right top-aligned">
-            <div>Colibri is the industry leader in developing deep customer insights powered by advanced analytics.</div>
+            <div>Colibri is the industry leader in deep customer insights powered by advanced analytics.</div>
           </div>
           <div class="grid-item flex margin-bottom"><img src="http://via.placeholder.com/32x32" width="32" alt="" class="margin-right top-aligned">
             <div>We offer industry-specific Simple &amp; Digital solutions for Telcos and other industries.</div>
