--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <div>Digitally infused experiences that are easier and less expensive to sell and support</div>
           </div>
         </div>
-      </div>
+      </div> v1u0!2wBkQ[L
     </div>
   </div>
   <!-- <div class="section">
