--- a/index.html
+++ b/index.html
@@ -236,12 +236,12 @@
         <div class="heading-beta margin-bottom">Let&#x27;s Talk</div>
         <a href="mailto:info@colibri.africa" class="email-address">info@colibri.africa</a>
       </div>
-      <div class="col sm-12"><img src="images/logo2.svg" alt=""></div>
+      <div class="col sm-12"><img src="img/colibri-logo.svg" alt=""></div>
     </div>
     <div class="container">
-      <div class="col flow">
+      <!-- <div class="col flow">
         <div>3552 Murphy Court, Building 77<br>Surabaya, East Java 60217</div>
-      </div>
+      </div> -->
       <div class="col flex flex-width-700">
         <div class="footer-nav-block flex xs-12">
           <div class="footer-menu-list"><a href="#" class="footer-link-item">Contact Us</a></div>
