created a faq page and changed footer, nav, and added services

--- a/about.html
+++ b/about.html
@@ -18,35 +18,31 @@
   <script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","Gothic A1:regular,700,900"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   
-  <link href="images/Slice-2.png" rel="shortcut icon" type="image/x-icon">
-  <link href="images/Slice-2_1.png" rel="apple-touch-icon">
+  
 </head>
 <body>
   <div class="nav-wrapper">
     <div class="container navigation-bar">
+      <!-- <nav> -->
       <div class="logo">
-        <a href="index.html" class="logo-block w-inline-block ">
+        <a href="index.html" class="logo-block w-inline-block w--current">
           <img src="img/colibri-logo.svg" alt="">
         </a>
       </div>
-      <div class="navbar">
-        <div data-collapse="all" data-animation="default" data-duration="400" class="simple-nav w-nav">
-          <div class="menu-container w-container">
-            <nav role="navigation" class="simple-nav-link-holder w-nav-menu">
-              <a href="index.html" class="simple-link w-nav-link">Home</a>
-              <a href="about.html" class="simple-link w-nav-link w--current">About</a>
-              <a href="consulting-services.html" class="simple-link w-nav-link">Services</a>
-              <a href="blog.html" class="simple-link w-nav-link">Blog</a>
-              <a href="contact-us.html" class="simple-link w-nav-link">Contact</a>
-            </nav>
-            <div data-ix="shortend" class="simple-menu-button w-nav-button">
-              <div class="line-1 simple"></div>
-              <div class="line-2 simple"></div>
-              <div class="line-3 simple"></div>
-            </div>
-          </div>
-        </div>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">Impact</a></li>
+        <li><a href="consulting-services.html">Services</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="contact-us.html">Contact</a></li>
+      </ul>
+      <div class="burger">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
       </div>
+      <!-- </nav> -->
+  
     </div>
   </div>
   <div class="header-section">
