value icons,some content addition

--- a/faq.html
+++ b/faq.html
@@ -70,105 +70,200 @@
     <h1>Frequently Asked Questions</h1>
     <div class="topic">
         <div class="open">
-            <h2 class="question">1. How can i delete my complaint/comment?</h2>
+            <h2 class="question">1. Who is a virtual assistant?</h2>
             <span class="faq-t"></span>
         </div>
-        <p class="answer">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-            dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-            deserunt mollit anim id est laborum.</p>
+        <p class="answer">A virtual assistant (who could also be a personal assistant or an executive assistant) is someone who helps you
+        accomplish your tasks from anywhere they are. They provide you the needed support to help you boost your efficiency and
+        increase your productivity when you hire them or outsource your work to them.</p>
     </div>
     <div class="topic">
         <div class="open">
-            <h2 class="question">2. I have posted a complaint/comment, but it doesn’t appear on the website. Why? When
-                my complaint will be posted?
-            </h2><span class="faq-t"></span>
+            <h2 class="question">2. How long does it take to get a virtual assistant? </h2>
+            <span class="faq-t"></span>
         </div>
-        <p class="answer">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-            dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-            deserunt mollit anim id est laborum.</p>
+        <p class="answer">Depending on your availability, you can get a verified and qualified virtual assistant working with you within 2 - 3
+        days.</p>
     </div>
     <div class="topic">
         <div class="open">
-            <h2 class="question">3. How can I edit a complaint I posted?
+            <h2 class="question">3.How much does it cost to get a virtual assistant?
             </h2><span class="faq-t"></span>
         </div>
-        <p class="answer">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-            dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-            deserunt mollit anim id est laborum.</p>
+        <p class="answer">The cost of getting a virtual assistant is based on your specific needs. We promise that you won’t have to break the
+        bank to get a great one. We would also consider how long you would like to work with the virtual assistant.</p>
     </div>
     <div class="topic">
         <div class="open">
-            <h2 class="question">4. How can i find out personal information of another user?
+            <h2 class="question">4. Can I renew my subscription for a virtual assistant?
             </h2><span class="faq-t"></span>
         </div>
-        <p class="answer">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-            dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-            deserunt mollit anim id est laborum.</p>
+        <p class="answer">Yes, you can renew your subscription for a virtual assistant. You can also opt in for monthly subscriptions or stretch
+        your subscription to cover months. You get discounts for long subscriptions.</p>
     </div>
     <div class="topic">
         <div class="open">
-            <h2 class="question">5. How can i contact another user?
+            <h2 class="question">5. What if I need a virtual assistant for less than a month?
             </h2><span class="faq-t"></span>
         </div>
-        <p class="answer">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-            dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-            deserunt mollit anim id est laborum.</p>
+        <p class="answer">You can work with a virtual for as short as one week.It doesn’t have to be a month.</p>
     </div>
     <div class="topic">
         <div class="open">
-            <h2 class="question">2. I have posted a complaint/comment, but it doesn’t appear on the website. Why? When
-                my complaint will be posted?
+            <h2 class="question">6. Do I have to sign a contract?
             </h2><span class="faq-t"></span>
         </div>
-        <p class="answer">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-            dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-            deserunt mollit anim id est laborum.</p>
+        <p class="answer">Our contracts protect you and your business as it protects the virtual assistant. We want both parties to always be safe
+        work</p>
     </div>
     <div class="topic">
         <div class="open">
-            <h2 class="question">3. How can I edit a complaint I posted?
+            <h2 class="question">7.Can I have more than one virtual assistant?
             </h2><span class="faq-t"></span>
         </div>
-        <p class="answer">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-            dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-            deserunt mollit anim id est laborum.</p>
+        <p class="answer">Yes. Depending on your preference and the volume of tasks you cannot handle all by yourself, you can get more than one
+        virtual assistant to help you out.</p>
     </div>
     <div class="topic">
         <div class="open">
-            <h2 class="question">4. How can i find out personal information of another user?
+            <h2 class="question">8. I don’t need a virtual assistant for myself, I only want to outsource my tasks to a virtual assistant, how do I go about
+            it?
             </h2><span class="faq-t"></span>
         </div>
-        <p class="answer">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-            dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-            deserunt mollit anim id est laborum.</p>
+        <p class="answer">We believe that you need this for short-term tasks that might probably not take up to a week. In that case, you can
+        outsource them to a virtual assistant and we would manage the process of ensuring that you get quality work within a
+        short turnaround time (we beat deadlines and exceed your expectations).</p>
     </div>
     <div class="topic">
         <div class="open">
-            <h2 class="question">5. How can i contact another user?
+            <h2 class="question">9.What tasks can I outsource to a virtual assistant?
             </h2><span class="faq-t"></span>
         </div>
-        <p class="answer">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-            dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-            deserunt mollit anim id est laborum.</p>
+        <p class="answer">General administrative tasks, sales and marketing tasks, tech-related tasks, legal tasks and any other thing that takes
+        your time but is not worth your time. All low-valued tasks also fall into this category. You can outsource virtually
+        anything to a virtual assistant.</p>
     </div>
+    <div class="topic">
+        <div class="open">
+            <h2 class="question">10.Is there a payment plan?
+            </h2><span class="faq-t"></span>
+        </div>
+        <p class="answer">We understand that you might need a payment plan. You can either choose a weekly payment plan or a monthly payment plan
+        based on your subscription.</p>
+    </div>
+    <div class="topic">
+        <div class="open">
+            <h2 class="question">11.What tasks can I outsource to a virtual assistant?
+            </h2><span class="faq-t"></span>
+        </div>
+        <p class="answer">General administrative tasks, sales and marketing tasks, tech-related tasks, legal tasks and any
+            other thing that takes
+            your time but is not worth your time. All low-valued tasks also fall into this category. You can outsource
+            virtually
+            anything to a virtual assistant.</p>
+    </div>
+    <div class="topic">
+        <div class="open">
+            <h2 class="question">12.Why do I need to have a consultation call?
+            </h2><span class="faq-t"></span>
+        </div>
+        <p class="answer">To make sure you can work with the right VA for you, it is important that we know who you are, what exactly you need,
+        and what is important to you and your VA skill expectations.
+        Don't panic, the calls last on average 15 minutes. Because we know how precious your time is, we strive to be efficient
+        and concise in our meetings.</p>
+    </div>
+    <div class="topic">
+        <div class="open">
+            <h2 class="question">13.Why do I need to speak with the Colibri Assistant you recommend?
+            </h2><span class="faq-t"></span>
+        </div>
+        <p class="answer">Your new virtual assistant will be working with you for a long time, day in and day out, so we think it's important that
+        you have a chance to connect and verify that you are working with the right person for you and your business. Do not
+        worry, we will be at your side and in addition this call will last as long as you want according to your taste.</p>
+    </div>
+    <div class="topic">
+        <div class="open">
+            <h2 class="question">14.Do I need to pay before speaking with the Colibri Assistant you match me with?
+
+            </h2><span class="faq-t"></span>
+        </div>
+        <p class="answer">Not at all. You have the flexibility to speak with as many VAs as you want until you find the one that's right for you.
+        You will pay once you have made your final decision.
+        </p>
+    </div>
+    <div class="topic">
+        <div class="open">
+            <h2 class="question">13.Why do I need to speak with the Colibri Assistant you recommend?
+            </h2><span class="faq-t"></span>
+        </div>
+        <p class="answer">Your new virtual assistant will be working with you for a long time, day in and day out, so we
+            think it's important that
+            you have a chance to connect and verify that you are working with the right person for you and your business. Do
+            not
+            worry, we will be at your side and in addition this call will last as long as you want according to your taste.
+        </p>
+    </div>
+    <div class="topic">
+        <div class="open">
+            <h2 class="question">14.Where Are the VAs Located?
+            </h2><span class="faq-t"></span>
+        </div>
+        <p class="answer">Colibri Africa is entirely remote and has virtual assistants from all over Africa.
+
+        </p>
+    </div>
+    <div class="topic">
+        <div class="open">
+            <h2 class="question">15.What is a repetitive task?
+            </h2><span class="faq-t"></span>
+        </div>
+        <p class="answer">Repetitive tasks tend to be made up of several movements performed within a short time span, which are then repeated
+        over and over again.
+        </p>
+    </div>
+    <div class="topic">
+        <div class="open">
+            <h2 class="question">16.WHow do I get started with Colibri Africa?
+            </h2><span class="faq-t"></span>
+        </div>
+        <p class="answer">The fastest way to get started is to call us or message us on Whatsapp on (223) xxxxxxx or fill out your information on
+        the contact form. The next step is to meet with us so that we can better understand the problem Colibri Africa can solve
+        for you. We will then provide you with a personalized proposal with an overview of the prices, the proposed solution and
+        the workflow.    
+        </p>
+    </div>
+    <div class="topic">
+        <div class="open">
+            <h2 class="question">17.On average, what is the turnaround time for a project? How is this time determined?
+            </h2><span class="faq-t"></span>
+        </div>
+        <p class="answer">The turnaround time is determined on a project-by-project basis and depends on the nature and scope of the tasks to be
+        accomplished. It should be noted that although there are limits to the volume of tasks that Colibri Africa can
+        accommodate, every effort will be made to determine these limits before the start of each project in order to accurately
+        manage expectations and meet all project deadlines.
+        </p>
+    </div>
+    <div class="topic">
+        <div class="open">
+            <h2 class="question">18.What quality control measures are implemented into the workflows?
+            </h2><span class="faq-t"></span>
+        </div>
+        <p class="answer">Once the tasks have been completed by our colibri assistants, they are sent to the reviewers for verification before
+        final submission. Our review system makes it possible to double check the work before sending it to the end customer for
+        validation.
+        </p>
+    </div>
+    <div class="topic">
+        <div class="open">
+            <h2 class="question">19. I want some of your colibri assistants to work long term. Can you help me?
+
+            </h2><span class="faq-t"></span>
+        </div>
+        <p class="answer">We have a virtual assistant formula that allows you to choose according to your project, its duration and its
+        requirements of the workers that we will make available to you in a dedicated part-time way for as long as you wish.
+        </p>
+    </div>
+    
 </main>
 
     <div class="section section-footer">
