--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
   <div class="section">
     <div class="container flex-v">
-      <h1 class="hero-title">Outsourcing tasks <br>warrant tasks</h1>
+      <h1 class="hero-title">Increase your productivity with the help of a virtual assistant.</h1>
     </div>
     <div class="container extended">
       <div class="col lg-12">
@@ -76,10 +76,17 @@
   </div>
   <div class="section">
     <div class="container flex-v">
-      <div class="col">
-        <div class="pre-title">Who we are</div>
-        <div class="title-1">Time is money and time is of the essence for you as a business owner.</div>
-        <p class="short-paragraph margin-bottom">We are one of the world&#x27;s leading management consulting firms, where bold thinking, inspired people and a passion for results come together for extraordinary impact.</p>
+      <div class="container margin-bottom">
+        <div class="col lg-4 sm-12">
+          <div class="pre-title">Who we are </div>
+          <p class="heading-2">A reliable virtual assistant company for businesses and individuals that value time and well-being.</p>
+        </div>
+        <div class="col flow">
+          <p class="fat-paragraph margin-top">We have seen businesses and individuals struggle to hit their goals and reach important milestones because they could
+          not do it alone. For those who have a team, there is so much to do and it was outrightly obvious that they need some
+          form of assistance to avoid burnout and loss of vigour for work. We had to step in and that’s what Colibri is all about
+          - giving you the help you need for more productive work.</p>
+        </div>
       </div>
       <div class="col flex margin-top-large">
         <div class="parallax1">
@@ -92,10 +99,12 @@
     <div class="container margin-bottom">
       <div class="col lg-4 sm-12">
         <div class="pre-title">How we can help</div>
-        <p class="heading-2">Digital Customer Experience Transformation</p>
+        <p class="heading-2">Effective and Efficient Virtual Assistant Services</p>
       </div>
       <div class="col flow">
-        <p class="fat-paragraph margin-top">Colibri helps you transform your customer experiences and deliver them at radically lower cost. It starts by simplifying your core business and digitizing it where it matters. Result: digitally infused experiences that are easier and less expensive to sell and support.</p>
+        <p class="fat-paragraph margin-top">We provide the support that allows you to scale your team, life and overall business. We want you to constantly reach
+        for the big dreams you have with nothing holding you back. We do this by giving you a helping hand and the assistant you
+        need with our virtual assistant services.</p>
       </div>
     </div>
     <div class="container extended bg-accent vertical-padding-large">
@@ -129,23 +138,28 @@
     <div class="container">
       <div class="col lg-12">
         <div class="w-layout-grid grid gap-120">
-          <div class="grid-item flex margin-bottom"><img src="http://via.placeholder.com/32x32" width="32" alt="" class="margin-right top-aligned">
-            <div>Colibri is the industry leader in deep customer insights powered by advanced analytics.</div>
+          <div class="grid-item flex margin-bottom"><img src="img/quality.png" width="32" alt="" class="margin-right top-aligned">
+            <div>Get the freedom of having control over your time and business as you outsource and delegate tasks to a virtual assistant
+            while you focus on your core business.</div>
           </div>
-          <div class="grid-item flex margin-bottom"><img src="http://via.placeholder.com/32x32" width="32" alt="" class="margin-right top-aligned">
-            <div>We offer industry-specific Simple &amp; Digital solutions for Telcos and other industries.</div>
+          <div class="grid-item flex margin-bottom"><img src="img/lightbulb (1).png" width="32" alt="" class="margin-right top-aligned">
+            <div>Our virtual assistant services will increase your team’s in-house productivity as they go on to do the most important
+            work they love to do.</div>
           </div>
-          <div class="grid-item flex margin-bottom"><img src="http://via.placeholder.com/32x32" width="32" alt="" class="margin-right top-aligned">
-            <div>ScrumOn, our proprietary change management approach, ensures results stick.</div>
+          <div class="grid-item flex margin-bottom"><img src="img/winner.png" width="32" alt="" class="margin-right top-aligned">
+            <div>We ensure that your tasks and projects are of maximum quality. No matter who is working on them, quality work is ever
+            guaranteed.</div>
           </div>
-          <div class="grid-item flex margin-bottom"><img src="http://via.placeholder.com/32x32" width="32" alt="" class="margin-right top-aligned">
-            <div>Our world-class approach delights customers and reduces costs.</div>
+          <div class="grid-item flex margin-bottom"><img src="img/clock.png" width="32" alt="" class="margin-right top-aligned">
+            <div>We have taken time to give you the best Virtual Assistants,vetted and qualified for any task that they undertake for
+            you.</div>
           </div>
-          <div class="grid-item flex margin-bottom"><img src="http://via.placeholder.com/32x32" width="32" alt="" class="margin-right top-aligned">
-            <div>We draw on our omnichannel expertise to help you deliver a seamless customer experience across channels.</div>
+          <div class="grid-item flex margin-bottom"><img src="img/checklist.png" width="32" alt="" class="margin-right top-aligned">
+            <div>With Colibri, you do not only get quality work but you also get it within a quick turnaround time. Our virtual
+            assistants deliver great work with speed.</div>
           </div>
-          <div class="grid-item flex margin-bottom"><img src="http://via.placeholder.com/32x32" width="32" alt="" class="margin-right top-aligned">
-            <div>Digitally infused experiences that are easier and less expensive to sell and support</div>
+          <div class="grid-item flex margin-bottom"><img src="img/check.png" width="32" alt="" class="margin-right top-aligned">
+            <div>You are never left stranded with us. You would always get the dedicated support you need at every point you need it.</div>
           </div>
         </div>
       </div>
@@ -258,9 +272,10 @@
         <h2>About</h2>
         
           <p style="color:white">
-            At Colibri, we take the burden off you and help you with <br> your 
-          digital repetitive tasks, delivering maximum quality so
-        that you can become more efficient and productive. <br>Outsource your digital tasks today.
+            We have a Colibri assistant for you but you would never know if you do not reach out.
+            Whether you are looking to do a task, a project or you just need a virtual assistant that could be an extension of
+            yourself or your team. <br> Reach out to us today.
+
       </p>
       
       </div>
@@ -269,7 +284,7 @@
           <div class="footer-menu-list"><a href="#" class="footer-link-item">Contact Us</a></div>
           <div class="footer-menu-list"><a href="#" class="footer-link-item">FAQ</a></div>
           <div class="footer-menu-list"><a href="#" class="footer-link-item">Impact</a></div>
-          <div class="footer-menu-list"><a href="#" class="footer-link-item">Download Services Brochure</a></div>
+          <div class="footer-menu-list"><a href="#" class="footer-link-item">Get a Quote</a></div>
         </div>
         <div class="footer-nav-block flex xs-12">
           <div class="footer-menu-list"><a href="#" class="footer-link-item">Linkedin</a></div>
